snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.153923-2.jar.sha256
de4b8793bc2106ae425ccdd4fa59cf85bd39eee05d5106e61f9d320b4e65880f